# etherlink

./: .gitignore  Cargo.toml  GCC_TODO.md  README.md  TODO.md  build.rs
docs/: README.md
docs/api/: README.md
docs/guides/: getting-started.md
examples/: basic_usage.rs
gcc/: README.md
gcc/tokenomics/: gcc-economics.md
proto/: cns.proto  ghostchain.proto  ghostplane.proto
src/: client.rs  cns.rs  error.rs  ffi.rs  ghostplane.rs  lib.rs  main.rs  revm.rs  rvm.rs  types.rs
src/auth/: crypto.rs  guardian.rs  mod.rs
src/clients/: cns.rs  ghostd.rs  gid.rs  gledger.rs  gsig.rs  mod.rs  walletd.rs
src/transport/: gquic.rs  http.rs  mod.rs
tests/: integration_tests.rs
